<resources>
    <string name="app_name">PRates</string>
    <string name="header">Выберите валюту</string>
    <string name="choose">Выбрать</string>
    <string name="update">Последнее обновление:</string>
    <string name="edit_currency">Настроить валюту</string>
    <string name="choose_main_currency">Выберите основную валюту:</string>
    <string name="main_currency">Выбрана валюта:</string>
    <string name="default_num">Значение по умолчанию:</string>
    <string name="other">Остальные валюты:</string>
    <string name="to_save">Сохранить</string>
    <string name="to_search_hint">Поиск</string>
    <string name="more_about_currency"><u>Подробнее</u></string>
    <string name="more_about_currency_header">Подробнее о курсе</string>
</resources>