<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="0dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:background="@color/main_color"
            android:paddingVertical="20dp"
            android:paddingStart="130dp"
            android:paddingEnd="14dp"
            android:layout_gravity="center"
            android:text="@string/edit_currency"
            android:fontFamily="@font/bold"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size" />

        <Button
            android:id="@+id/curSetBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:icon="@drawable/arrow_back"
            android:backgroundTint="@color/main_color"
            android:stateListAnimator="@null"
            android:layout_marginStart="1dp"
            android:layout_marginTop="3dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="10dp"
        android:letterSpacing="0"
        android:text="@string/main_currency"
        android:fontFamily="@font/normal"
        android:textColor="@color/black"
        android:textSize="@dimen/other_text_size" />

    <Button
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="300dp"
        app:cornerRadius="@dimen/circle_button_radius"
        android:backgroundTint="@color/main_color"
        app:icon="@drawable/exchange" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="310dp"
        android:letterSpacing="0"
        android:text="@string/choose"
        android:fontFamily="@font/normal"
        android:textStyle="bold"
        android:textSize="@dimen/choose_text_size"
        android:textColor="@color/black"/>

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/main_color"
                android:paddingVertical="14dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:hint="@string/to_search_hint"
                android:inputType="textCapWords"
                android:fontFamily="@font/normal"
                android:textColor="@color/white"
                android:textSize="@dimen/other_text_size" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:icon="@drawable/search"
                android:layout_marginStart="335dp"
                android:layout_marginTop="3dp"
                android:backgroundTint="@color/main_color"
                android:stateListAnimator="@null"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="0dp" >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ListView"
            />

    </RelativeLayout>


</LinearLayout>