<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="0dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:background="@color/main_color"
            android:paddingVertical="20dp"
            android:paddingStart="130dp"
            android:paddingEnd="14dp"
            android:layout_gravity="center"
            android:text="@string/edit_currency"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            android:fontFamily="@font/bold" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:icon="@drawable/arrow_back"
            android:backgroundTint="@color/main_color"
            android:stateListAnimator="@null"
            android:layout_marginStart="1dp"
            android:layout_marginTop="3dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:paddingTop="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingStart="10dp"
            android:letterSpacing="0"
            android:text="@string/choose_main_currency"
            android:fontFamily="@font/normal"
            android:textColor="@color/black"
            android:textSize="@dimen/other_text_size" />

        <Button
            android:id="@+id/mainCurButton"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="300dp"
            app:cornerRadius="@dimen/circle_button_radius"
            android:backgroundTint="@color/main_color"
            app:icon="@drawable/exchange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="310dp"
            android:letterSpacing="0"
            android:text="@string/choose"
            android:fontFamily="@font/normal"
            android:textStyle="bold"
            android:textSize="@dimen/choose_text_size"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:paddingStart="10dp"
            android:letterSpacing="0"
            android:text="@string/default_num"
            android:fontFamily="@font/normal"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="290dp"
            android:inputType="numberDecimal"
            android:fontFamily="@font/normal"
            android:background="@drawable/rouded_edittext_bg"
            android:textColor="@color/black"
            android:textSize="@dimen/other_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:paddingStart="10dp"
            android:letterSpacing="0"
            android:text="@string/other"
            android:fontFamily="@font/normal"
            android:textColor="@color/black"
            android:textSize="@dimen/other_text_size" />

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="50dp"
            app:cornerRadius="@dimen/circle_button_radius"
            android:backgroundTint="@color/main_color"
            app:icon="@drawable/exchange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="60dp"
            android:letterSpacing="0"
            android:text="@string/choose"
            android:fontFamily="@font/normal"
            android:textStyle="bold"
            android:textSize="@dimen/choose_text_size"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="175dp"
            app:cornerRadius="@dimen/circle_button_radius"
            android:backgroundTint="@color/main_color"
            app:icon="@drawable/exchange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="185dp"
            android:letterSpacing="0"
            android:text="@string/choose"
            android:fontFamily="@font/normal"
            android:textStyle="bold"
            android:textSize="@dimen/choose_text_size"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="300dp"
            app:cornerRadius="@dimen/circle_button_radius"
            android:backgroundTint="@color/main_color"
            app:icon="@drawable/exchange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="310dp"
            android:letterSpacing="0"
            android:text="@string/choose"
            android:fontFamily="@font/normal"
            android:textStyle="bold"
            android:textSize="@dimen/choose_text_size"
            android:textColor="@color/black"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="0dp"
        android:background="@color/main_color" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:paddingVertical="14dp"
            android:paddingStart="160dp"
            android:paddingEnd="14dp"
            android:layout_gravity="center"
            android:text="@string/to_save"
            android:fontFamily="@font/bold"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"/>

        <ImageView
            android:id="@+id/changeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/save"
            android:layout_marginStart="120dp"
            android:layout_marginTop="6dp"/>

    </RelativeLayout>


</LinearLayout>
